--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -32,7 +32,8 @@ includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.eclipselink.classpath}:\
-    ${file.reference.mysql-connector-java-5.1.13-bin.jar}
+    ${file.reference.mysql-connector-java-5.1.13-bin.jar}:\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
